--- a/index.html
+++ b/index.html
@@ -1,21 +1,95 @@
 <!DOCTYPE html>\
 <html lang="es" dir="ltr">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-      <!-- Bootstrap CSS -->
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="estilo.css">
-    <title></title>
-      <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
+      <title>COVID-19</title>
   </head>
-
   <body>
+    <div class="icono">
+        <img src="imagenes/hiclipart.com.png"><h1>covid19</h1>
+    </div>
+    <nav class="navbar-nav navbar-expand-lg navbar-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#queEs">|  ¿Que es?</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#sintomas">|  Sintomas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#comoCuidarnos">|  Cuidados</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#colombia">|  Colombia</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="postivos.html">|  Casos Positivos</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!--F-->
+    <div class="container-fluid">
+    <section id="queEs" class="queEs">
+      <div class="row">
+        <div class="col-sm">
+          <h1>Que es el COVID-19</h1>
+          <p>La COVID-19 es la enfermedad infecciosa causada por el
+            coronavirus que se ha descubierto más recientemente. Tanto
+            este nuevo virus como la enfermedad que provoca eran
+            desconocidos antes de que estallara el brote en Wuhan (China)
+            en diciembre de 2019. Actualmente la COVID-19 es una
+          pandemia que afecta a muchos países de todo el mundo.</p>
+          <a href="covid.html" class="btn btn-ver-mas float-right">ver más</a>
+        </div>
+        <div class="col-sm">
+          <img src="imagenes/img-coronavirus-covid19.jpg">
+        </div>
+        <section id="sintomas" class="queEs">
+          <div class="row">
+            <div class="col-sm">
+              <img src="imagenes/bigstock-lung-virus-infection-and-coron-350084953.jpeg" alt="">
+            </div>
+            <div class="col-sm">
+              <h1>Cuales son los SINTOMAS</h1>
+              <p>Los síntomas más habituales de la COVID-19 son la fiebre, la tos
+                seca y el cansancio. Otros síntomas menos frecuentes que
+                afectan a algunos pacientes son los dolores y molestias, la
+                congestión nasal, el dolor de cabeza, la conjuntivitis, el dolor de
+                garganta, la diarrea, la pérdida del gusto o el olfato y las
+                erupciones cutáneas o cambios de color en los dedos de las
+                manos o los pies. Estos síntomas suelen ser leves y comienzan
+                gradualmente. Algunas de las personas infectadas solo
+                presentan síntomas levísimos.</p>
+          <a href="covid.html" class="btn verMas">ver mas</a>
+            </div>
+            <section id="comoCuidarnos" class="queEs">
+              <div class="row">
+                <div class="col-sm">
+                  <h1>Como podemos Cuidar</h1>
+                  <p>Practicar la higiene respiratoria y de las manos es importante
+                    en TODO momento y la mejor forma de protegerse.
+                    Cuando sea posible, mantenga al menos un metro de distancia
+                    entre usted y los demás. Esto es especialmente importante si
+                    está al lado de alguien que esté tosiendo o estornudando.
+                    Dado que es posible que algunas personas infectadas aún no
+                    presenten síntomas o que sus síntomas sean leves, conviene
+                    que mantenga una distancia física con todas las personas.</p>
+                </div>
+              </div>
+            </section>
+          </div>
+        </section>
   </body>
 
 </html>
