--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="#colombia">|  Colombia</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="postivos.html">|  Casos Positivos</a>
+          <a class="nav-link" href="Barra/postivos.html">|  Casos Positivos</a>
         </li>
       </ul>
     </div>
@@ -50,7 +50,7 @@
             desconocidos antes de que estallara el brote en Wuhan (China)
             en diciembre de 2019. Actualmente la COVID-19 es una
           pandemia que afecta a muchos países de todo el mundo.</p>
-          <a href="covid.html" class="btn btn-ver-mas float-right">ver más</a>
+          <a href="Barra/covid.html" class="btn verMas float-right">ver más</a>
         </div>
         <div class="col-sm">
           <img src="imagenes/img-coronavirus-covid19.jpg">
@@ -71,7 +71,7 @@
                 manos o los pies. Estos síntomas suelen ser leves y comienzan
                 gradualmente. Algunas de las personas infectadas solo
                 presentan síntomas levísimos.</p>
-          <a href="covid.html" class="btn verMas">ver mas</a>
+          <a href="Barra/covid.html" class="btn verMas float-right">ver mas</a>
             </div>
             <section id="comoCuidarnos" class="queEs">
               <div class="row">
@@ -85,10 +85,66 @@
                     Dado que es posible que algunas personas infectadas aún no
                     presenten síntomas o que sus síntomas sean leves, conviene
                     que mantenga una distancia física con todas las personas.</p>
+                    <a href="Barra/covid.html" class="btn verMas float-right">ver mas</a>
+                </div>
+                <div class="col-sm">
+                  <img src="imagenes/img-blog-coronavirus_0.jpg" alt="">
+                </div>
+              </div>
+            </section>
+            <section id="colCovid" class = "queEs">
+              <div class="row">
+                <div class="col-sm">
+                  <img src="imagenes/bannerCifrasMobile.png" alt="">
+                </div>
+                <div class="col-sm">
+                  <h1>COVID19 en Colombia</h1>
+                  <p>El Ministerio de Salud informó que en el país hay 67.114 casos
+                    activos de coronavirus, de los que 7.106 son nuevos. </br>Además,
+                    hubo 132 fallecidos, siendo 123 de días anteriores.</br>
+                    En las últimas 24 horas se procesaron 35.973 pruebas, de las
+                    que 23.561 son PCR y 12.142 son de antígenos.</br>
+                    862.158 casos se han confirmado en el país, de esos 766.300 se
+                    han recuperado y 26.844 han muerto.</p>
+                    <div class="botones">
+                      <a href="Barra/covid.html" class="btn verMas float-right">ver mas</a><a href="Barra/covid.html" class="btn verMas">Casos</a>
+                    </div>
                 </div>
               </div>
             </section>
           </div>
+          <footer>
+            <div class="container textWhite">
+              <br>
+              <div class="row">
+                <div class="col12 col4 colg4">
+                  <h2>Enlaces Nacionales</h2>
+                  <ul>
+                    <li><a href="#">Minsalud</a></li>
+                    <li><a href="#">Coronavirus Colombia</a></li>
+                    <li><a href="#">Insalud</a></li>
+                  </ul>
+                </div>
+                <div class="col12 cold4 colg4">
+                  <h2 id="contacto ">Enlaces Interncacionales</h2>
+                  <ul>
+                    <li><a href="#">OMS</a></li>
+                    <li><a href="#">Coronavirus App</a></li>
+                    <li><a href="#">Clinica Mayo</a></li>
+                    <li><a href="#">Naciones unidas</a></li>
+                  </ul>
+                </div>
+                <div class="col12 col4 colg4">
+                  <h2> Contacto</h2>
+                  <p><strong>Email: </strong>joserafaelpm@ufps.edu.co</p>
+                  <p><strong>Celular: </strong> 3158048922</p>
+                </div>
+              </div>
+            </div>
+          </footer>
+          <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
         </section>
   </body>
 
