antes del fin xd

--- a/index.html
+++ b/index.html
@@ -107,45 +107,44 @@
                     862.158 casos se han confirmado en el país, de esos 766.300 se
                     han recuperado y 26.844 han muerto.</p>
                     <div class="botones">
-                      <a href="Barra/covid.html" class="btn verMas float-right">ver mas</a><a href="Barra/covid.html" class="btn verMas">Casos</a>
+                      <a href="covid.html" class="btn verMas float-right">ver mas</a><a href="covid.html" class="btn verMas">Casos</a>
                     </div>
                 </div>
               </div>
             </section>
           </div>
-          <footer>
-            <div class="container textWhite">
-              <br>
-              <div class="row">
-                <div class="col12 col4 colg4">
-                  <h2>Enlaces Nacionales</h2>
-                  <ul>
-                    <li><a href="#">Minsalud</a></li>
-                    <li><a href="#">Coronavirus Colombia</a></li>
-                    <li><a href="#">Insalud</a></li>
-                  </ul>
-                </div>
-                <div class="col12 cold4 colg4">
-                  <h2 id="contacto ">Enlaces Interncacionales</h2>
-                  <ul>
-                    <li><a href="#">OMS</a></li>
-                    <li><a href="#">Coronavirus App</a></li>
-                    <li><a href="#">Clinica Mayo</a></li>
-                    <li><a href="#">Naciones unidas</a></li>
-                  </ul>
-                </div>
-                <div class="col12 col4 colg4">
-                  <h2> Contacto</h2>
-                  <p><strong>Email: </strong>joserafaelpm@ufps.edu.co</p>
-                  <p><strong>Celular: </strong> 3158048922</p>
+            <footer >
+              <div class="container text-white">
+                <br>
+                <div class="row">
+                  <div class="col12 col4 colg4">
+                    <h4>Enlaces Nacionales</h4>
+                    <ul>
+                      <li><a href="#">Minsalud</a></li>
+                      <li><a href="#">Coronavirus Colombia</a></li>
+                      <li><a href="#">Insalud</a></li>
+                    </ul>
+                  </div>
+                  <div class="col12 colmd4 collg4">
+                    <h4 id="contacto">Enlaces Internacionales</h4>
+                    <ul>
+                      <li><a href="#">OMS</a></li>
+                      <li><a href="#">Coronavirus App</a></li>
+                      <li><a href="#">Clinica Mayo</a></li>
+                      <li><a href="#">Naciones unidas</a></li>
+                    </ul>
+                  </div>
+                  <div class="col12 col4 colg4">
+                    <h4>Contacto</h4>
+                    <p><strong>Email: </strong>joserafaelpm@ufps.edu.co</p>
+                    <p><strong>Celular: </strong> 3158048922</p>
+                  </div>
                 </div>
               </div>
-            </div>
           </footer>
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
         </section>
   </body>
-
 </html>
