despues del fin

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="#colombia">|  Colombia</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="Barra/postivos.html">|  Casos Positivos</a>
+          <a class="nav-link" href="postivos.html">|  Casos Positivos</a>
         </li>
       </ul>
     </div>
@@ -50,7 +50,7 @@
             desconocidos antes de que estallara el brote en Wuhan (China)
             en diciembre de 2019. Actualmente la COVID-19 es una
           pandemia que afecta a muchos países de todo el mundo.</p>
-          <a href="Barra/covid.html" class="btn verMas float-right">ver más</a>
+          <a href="covid.html" class="btn verMas float-right">ver más</a>
         </div>
         <div class="col-sm">
           <img src="imagenes/img-coronavirus-covid19.jpg">
@@ -71,7 +71,7 @@
                 manos o los pies. Estos síntomas suelen ser leves y comienzan
                 gradualmente. Algunas de las personas infectadas solo
                 presentan síntomas levísimos.</p>
-          <a href="Barra/covid.html" class="btn verMas float-right">ver mas</a>
+          <a href="covid.html" class="btn verMas float-right">ver mas</a>
             </div>
             <section id="comoCuidarnos" class="queEs">
               <div class="row">
@@ -85,7 +85,7 @@
                     Dado que es posible que algunas personas infectadas aún no
                     presenten síntomas o que sus síntomas sean leves, conviene
                     que mantenga una distancia física con todas las personas.</p>
-                    <a href="Barra/covid.html" class="btn verMas float-right">ver mas</a>
+                    <a href="covid.html" class="btn verMas float-right">ver mas</a>
                 </div>
                 <div class="col-sm">
                   <img src="imagenes/img-blog-coronavirus_0.jpg" alt="">
@@ -107,7 +107,7 @@
                     862.158 casos se han confirmado en el país, de esos 766.300 se
                     han recuperado y 26.844 han muerto.</p>
                     <div class="botones">
-                      <a href="covid.html" class="btn verMas float-right">ver mas</a><a href="covid.html" class="btn verMas">Casos</a>
+                      <a href="covid.html" class="btn verMas float-right">ver mas</a><a href="postivos.html" class="btn verMas">Casos</a>
                     </div>
                 </div>
               </div>
